# shared-bills

./: .coveragerc  .gitignore  .pylintrc  Pipfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt
.github/workflows/: pythonapp.yml
accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200106_1348.py
accounts/tests/: conftest.py  utils.py
accounts/tests/models/: test_user.py  test_user_manager.py
accounts/tests/views/: test_user.py  test_user_actions.py  test_users.py
bills/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
bills/migrations/: 0001_initial.py  0002_auto_20191210_2152.py  0003_auto_20191211_2056.py  0004_auto_20191222_1426.py  0005_auto_20200104_1125.py  0006_participant_user.py  0007_auto_20200106_1928.py  0008_auto_20200107_2126.py  0009_auto_20200108_1105.py  0010_auto_20200108_1430.py  0011_auto_20200108_1432.py  0012_auto_20200402_0347.py  0013_auto_20200402_1442.py
bills/tests/: conftest.py  utils.py
bills/tests/models/: test_bill.py  test_event.py  test_participant.py  test_payment.py
bills/tests/views/: test_bills.py  test_events.py  test_participants.py  test_payments.py  test_views.py
bills_app/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.css
frontend/src/components/: App.tsx
shared_bills/: asgi.py  settings.py  urls.py  wsgi.py
(+93 files in other folders)
